open-budget/app/styles/main.less
/* ... */
/* FOOTER */
.footer {
    li {
        display: inline-block;
        a {
            display: inline-block;
            margin-right:20px;
            margin-left:20px;
        }
        &:before {
            content: "\00B7"
        }
    }
    li:first-child {
        &:before {
            content: ""
        }
    }
}
/* Subscribe widget */
#subscribeWidget {
    &.notsubscribed::before {
        content: 'הרשמה לעדכונים';
    }
    &.subscribed::before {
        content: 'הסרת הרשמה לעדכונים';
    }
    &.loggedout::before {
        content: 'כניסה והרשמה לעדכונים';
    }
}

#subscribeModal{
  z-index: 999999;
  .modal-dialog {
    margin: 60px auto 0;
  }
}

.twitter-button {
	margin: 8px 10px;
	padding: 6px 10px;
	border-radius: 20px;
}

.tour-backdrop {
  opacity: 0.4 !important;
}

.popover, .modal {
  border: 1px solid white;
  min-width: 200px;

  box-shadow: 0px 5px 100px 10px rgba(0, 0, 0, 0.4);

  button.close{
    position: absolute;
    padding: 0px 5px;
    left: 0;
    top: 0;
    z-index: 10000;
  }

  .popover-title, .modal-header {
    border-bottom: 1px solid transparent;
    background: @ultralightgray;
    text-align: center;
  }

  .btn {
    border: 0;
    background: @ultralightgray;

    &:active {
      -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.125);
              box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.125);
    }
  }
}

// Override bootstrap-tour End button position for rtl.
.popover[class*="tour-"] {

  div.popover-navigation {
    padding: 0;

    .btn {
      display: block;
      width: 50%;
    }
  }

  .popover-content {
    padding: 14px;
    position: relative;
  }

  .popover-navigation.popover-navigation-rtl {
    *[data-role="end"] {
      position: absolute;
      left: 10px;
    }
  }

  &:before {
    position: absolute;
    display: block;
    content: '';
    top: 0; right: 0;
    border: 1px solid @lightgray;
    border-radius: 5px;
    height: 100%; width: 100%;
    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
  }

  &.right  .arrow{left:-10px; border-right-color: @lightgray}
  &.left   .arrow{right:-10px; border-left-color: @lightgray}
  &.bottom .arrow{top:-10px; border-bottom-color: @lightgray; &:after{right: -10px;}}
  &.top    .arrow{bottom:-10px; border-top-color: @lightgray; &:after{right: -10px;}}
}

// Override bootstrap popover text alignment for rtl.
.popover.popover-rtl {
  text-align: right;
}

.popover.popover-rtl[class*="tour-tour-en"] {

  .popover-content, .popover-title, .popover-navigation {
    text-align: center;
    direction: ltr;
  }

  button.close {
    left: auto;
    right: 0;
  }

  .btn-group > .btn {
    float: left;
    color: transparent;

    &:first-child:before {
      content: "« back";
      color: #333;
    }

    &:last-child:before {
      content: "next »";
      color: #333;
    }
  }
}

#tabs-label-container {
  width: 100%;
  overflow: auto;
}

  .tab-label {
    display: inline-block;
    float: right;
    padding: 1em;
    cursor: pointer;
    background-color: white;
  }
  .tab-label:hover {
    background-color: #efefef;
  }
  
  .tab-label.selected {
    background-color: grey;
  }

#tabs-content-container {
  width: 100%;
  overflow: auto;
}

  .tab-content {
    display: none;
  }
  
  .node {
    border: solid 1px white;
    font: 10px sans-serif;
    line-height: 12px;
    overflow: hidden;
    position: absolute;
    text-indent: 2px;
  }
  
#bubble-chart-container {
  position: relative;
}
  .bubble-group-label {
    position: absolute;
    text-align: center;
    pointer-events: none; // in order to allow hover event to fire under the label
  }
  
    .bubble-group-label-child {
      position: relative;
      left: -50%;
    }
    
    .bubble-group-label-total-sum {
      font-weight: bold;
    }

